Fixed for Safari overflow in userCard

--- a/styles/comps/Layout.module.scss
+++ b/styles/comps/Layout.module.scss
@@ -9,5 +9,5 @@
   background-attachment: fixed;
   background-size: 100% 100%;
   background-repeat: no-repeat;
-  // position: relative;
+  overflow: hidden;
 }
