--- a/styles/pages/userCard.module.scss
+++ b/styles/pages/userCard.module.scss
@@ -7,6 +7,7 @@
   color: var(--color-light);
   border-radius: var(--border-radius);
   border: var(--card-border);
+  overflow: hidden;
   .titleContainer {
     @include display();
     background-color: var(--color-1-dark);
@@ -37,8 +38,6 @@
     }
   }
   .rotateContainer {
-    overflow-x: clip;
-    overflow-y: visible;
     .rotateWrapper {
       transform: rotateY(0deg);
       transition: all 0.5s ease-in-out;
